<resources>
    <string name="successful_login">Sikeres bejelentkezés: %1$s</string>
    <string name="error_">Hiba: %1$s</string>
    <string name="error_missing_email">Kérlek, add meg az email címed!</string>
    <string name="error_missing_password">Kérlek, add meg a jelszót!</string>
    <string name="guest_login_succesful">Vendég belépés sikeres!</string>
    <string name="logout">Kijelentkezés</string>
    <string name="error_no_available_team">Nincsenek elérhető csapatok.</string>
    <string name="error_teams_load">Hiba történt a csapatok betöltésekor: %1$s</string>
    <string name="error_all_field_required">Minden mezőt ki kell tölteni!</string>
    <string name="error_cant_be_same_team">A két csapat nem lehet ugyanaz!</string>
    <string name="error_team_save">Hiba történt az aktuális csapat mentésekor!</string>
    <string name="match_added">Mérkőzés hozzáadva a csapatokhoz!</string>
    <string name="error_save_opponent">Hiba történt az ellenfél mentésekor!</string>
    <string name="team_added">Csapat hozzáadva!</string>
    <string name="error">Hiba történt!</string>
    <string name="error_team_not_found">Nem található csapat!</string>
    <string name="error_matches_not_found">Nem található mérkőzés!</string>
    <string name="error_teams_not_found">Nem találhatók csapatok!</string>
    <string name="error_delete_match">Hiba történt! Nem sikerült törölni a meccset!</string>
    <string name="match_deleted">Mérkőzés törölve!</string>
    <string name="error_load_opponent">Hiba történt az ellenfél adatainak törlésekor!</string>
    <string name="error_load_current_team">Hiba történt az aktuális csapat adatainak törlésekor!</string>
    <string name="error_no_db_connection">Hiba történt: nincs adatbázis kapcsolat!</string>
    <string name="error_query">Adatlekérési hiba: %1$s</string>
    <string name="error_no_available_teams">Nincsenek elérhető csapatok!</string>
    <string name="error_all_fileds_required">Minden mezőt ki kell tölteni!</string>
    <string name="match_modified">Mérkőzés módosítva!</string>
    <string name="error_updateing_opponent">Hiba történt az ellenfél frissítésekor!</string>
    <string name="error_updateing_match">Hiba történt a meccs frissítésekor!</string>
    <string name="error_deleting_old_match">Hiba történt a régi meccs törlésekor!</string>

    <string name="app_name">VizilabdApp</string>
    <string name="email">Email</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="guest_login">Belépés vendégként</string>
    <string name="match_date">Időpont (YYYY-MM-DD)</string>
    <string name="city">Város</string>
    <string name="opponent_team">Ellenfél csapat:</string>
    <string name="save_match">Mérkőzés Mentése</string>
    <string name="team_name">Csapat neve</string>
    <string name="team_logo_url">Csapat logója URL</string>
    <string name="save">Mentés</string>
    <string name="opponent_name">Ellenfél csapat</string>
    <string name="nav_teams_list">Csapatok Listája</string>
    <string name="nav_add_team">Csapat hozzáadása</string>
    <string name="nav_add_match">Mérkőzés hozzáadása</string>
</resources>