<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:fitsSystemWindows="true">

    <EditText
        android:id="@+id/matchDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/match_date"
        android:inputType="date" />

    <EditText
        android:id="@+id/matchCityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opponent_team"
        android:paddingTop="8dp" />

    <Spinner
        android:id="@+id/currentTeamSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/opponentTeamSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/saveMatchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_match"
        android:layout_marginTop="16dp" />
</LinearLayout>