<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <EditText
        android:id="@+id/teamNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/team_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/teamLogoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/team_logo_url"
        android:inputType="textWebEmailAddress" />

    <Button
        android:id="@+id/saveTeamButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>