<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:fitsSystemWindows="true">

    <EditText
        android:id="@+id/matchDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/match_date"
        android:inputType="date" />

    <EditText
        android:id="@+id/matchCityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:inputType="text" />

    <Spinner
        android:id="@+id/opponentTeamSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/saveChangesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

</LinearLayout>