<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Email mező -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Jelszó mező -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <!-- Bejelentkezés gomb -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <!-- Anonim bejelentkezés gomb -->
    <Button
        android:id="@+id/anonymousLoginButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/guest_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>